# AI-native-Textbook

./: README.md  package-lock.json
my_project/: .env.example  .gitignore  README.md
my_project/.specify/memory/: constitution.md
my_project/.specify/scripts/: start-dev-environment.bat  start-dev-environment.sh
my_project/backend/: .env.example  .pre-commit-config.yaml  pyproject.toml  requirements.txt  test_backend.py
my_project/backend/src/: __init__.py  load_textbook_content.py  main.py
my_project/backend/src/api/: __init__.py  auth.py  rag.py
my_project/backend/src/models/: __init__.py  database.py  textbook.py  user.py
my_project/backend/src/services/: openai_service.py  qdrant_neon_config.py
my_project/docusaurus/: package-lock.json
my_project/frontend/: .eslintignore  .eslintrc.js  docusaurus.config.js  package-lock.json  package.json  sidebars.js
my_project/frontend/docs/: intro.md
my_project/frontend/docs/gazebo-unity/: example.md  intro.md  quiz.md
my_project/frontend/docs/nvidia-isaac/: example.md  intro.md  quiz.md
my_project/frontend/docs/ros2/: example.md  intro.md  quiz.md
my_project/frontend/docs/vla-gpt/: example.md  intro.md  quiz.md
my_project/frontend/src/: Root.js  Root.tsx
my_project/frontend/src/components/: AuthComponent.tsx  AuthContext.tsx  FloatingChatbot.tsx  InteractiveExample.tsx  PersonalizationContext.tsx  PersonalizationSettings.tsx  RAGChatbotUI.tsx  SafeAuthComponent.tsx  SafePersonalizationSettings.tsx  TranslationSupport.tsx
my_project/specs/1-ai-textbook-project/: plan.md  research.md  spec.md  tasks.md
(+16 files in other folders)
